objects/Deal_ID_Thresholds__c.object
<CustomObject>
    <fields>
        <fullName>Eighty_Percent_Email_Date__c</fullName>
        <description>This field indicates the date the alert was been sent regarding the corresponding threshold</description>
        <inlineHelpText>This field indicates the date the alert was been sent regarding the corresponding threshold</inlineHelpText>
        <label>Eighty Percent Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eighty_Percent_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if an email alert has been sent regarding the corresponding threshold</description>
        <inlineHelpText>This field indicates if an email alert has been sent regarding the corresponding threshold</inlineHelpText>
        <label>Eighty Percent Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ninety_Percent_Email_Date__c</fullName>
        <description>This field indicates the date the alert was been sent regarding the corresponding threshold</description>
        <inlineHelpText>This field indicates the date the alert was been sent regarding the corresponding threshold</inlineHelpText>
        <label>Ninety Percent Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ninety_Percent_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if an email alert has been sent regarding the corresponding threshold</description>
        <inlineHelpText>This field indicates if an email alert has been sent regarding the corresponding threshold</inlineHelpText>
        <label>Ninety Percent Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seventy_Percent_Email_Date__c</fullName>
        <description>This field indicates the date the alert was been sent regarding the corresponding threshold</description>
        <inlineHelpText>This field indicates the date the alert was been sent regarding the corresponding threshold</inlineHelpText>
        <label>Seventy Percent Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seventy_Percent_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if an email alert has been sent regarding the corresponding threshold</description>
        <inlineHelpText>This field indicates if an email alert has been sent regarding the corresponding threshold</inlineHelpText>
        <label>Seventy Percent Email</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores information regarding Deal Id stack threshold email notifications for 70, 80, and 90 percent consumption</description>
    <label>Deal ID Thresholds</label>
</CustomObject>